completing CycleGAN from Scratch Implementations

--- a/Computer_Vision/60_CycleGAN_From_Scratch_PyTorch/CycleGAN_From_Scratch_PyTorch_FINAL_Entire_NB.ipynb
+++ b/Computer_Vision/60_CycleGAN_From_Scratch_PyTorch/CycleGAN_From_Scratch_PyTorch_FINAL_Entire_NB.ipynb
@@ -4,6 +4,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## CycleGAN From Scratch with PyTorch\n",
+        "\n",
         "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=wHo4N3njxDY&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=13)\n",
         "\n",
         "[![Imgur](https://imgur.com/PrgnIAi.png)](https://www.youtube.com/watch?v=wHo4N3njxDY&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=13)\n"
@@ -15,10 +17,14 @@
         "id": "jpEB1WLrhOx1"
       },
       "source": [
-        "Dataset - Content\n",
+        "### Dataset - Content\n",
+        "\n",
+        "### [Link to Dataset](https://people.eecs.berkeley.edu/~taesung_park/CycleGAN/datasets/)\n",
+        "\n",
         "Summer2Winter Yosemite dataset consists of 1540 Summer Photos & 1200 Winter Photos with each split into train and test subsets.\n",
         "\n",
-        "Acknowledgements\n",
+        "\n",
+        "\n",
         "This dataset was obtained from UC Berkeley's official directory of CycleGAN Datasets. For more details on the dataset refer the related CycleGAN publication. Work based on the dataset should cite:"
       ]
     },
