completing 61-Learning-Rate-Scheduler-PyTorch-including-Custom

--- a/PyTorch-Techniques/61-Learning-Rate-Scheduler-PyTorch-including-Custom.ipynb
+++ b/PyTorch-Techniques/61-Learning-Rate-Scheduler-PyTorch-including-Custom.ipynb
@@ -485,7 +485,9 @@
    "source": [
     "## Then usage of above class inside train.py file\n",
     "\n",
-    "### [My full CycleGAN Implementation code is here for your reference](https://github.com/rohan-paul/MachineLearning-DeepLearning-Code-for-my-YouTube-Channel/tree/master/Computer_Vision/60_CycleGAN_From_Scratch_PyTorch)"
+    "### [My full CycleGAN Implementation code is here for your reference](https://github.com/rohan-paul/MachineLearning-DeepLearning-Code-for-my-YouTube-Channel/tree/master/Computer_Vision/60_CycleGAN_From_Scratch_PyTorch)\n",
+    "\n",
+    "### [And the Link to Video for PyTorch CycleGAN Paper Implementation from Scratch - With Detailed Explanation of the Architecture](https://bit.ly/36zZWTK)\n"
    ]
   },
   {
