updating LSTM explanations

--- a/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -2703,6 +2703,57 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus - Further work to improving overall result from the above LSTM\n",
+    "\n",
+    "\n",
+    "* According to this [Study](https://d-nb.info/1185667245/34) - they got best results by utilizing as inputs different cryptocurrency data ( BTC, ETH and Ripple (XRP)) and handles them independently in order to exploit useful information from each cryptocurrency separately.\n",
+    "\n",
+    "* Further, in this video, for the sake of simplicity, I only created a single dimensional model using the Close price only. I could use all of Open, High, Low, Close and Volume to predict the Closing prices. And that would be a MULTIDIMENSIONAL LSTM prediction, which could have improved the accuracy of the model.\n",
+    "\n",
+    "* Also to improve prediction, some ideas might be to include technical indicators as another set of input variables.\n",
+    "\n",
+    "* Making the input time-series data stationary\n",
+    "\n",
+    "* Adding more layers to my LSTM model - When you add layers you are increasing the depth of the neural network. And generally, adding more layers will help you to extract more features. But we can do that upto a certain extent. There is a limit. After that, instead of extracting features, we tend to ‘overfit’ the data. Overfitting can lead to errors in some or the other form. So, we are supposed to experiment around this to check which gives best result, taking into considerations factors like over fitting, which may happen specially when you increase the complexity of a model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Choosing the right amount of nodes and layers\n",
+    "\n",
+    "There is no final, definite, rule of thumb on how many nodes (or hidden neurons) or how many layers one should choose, and very often a trial and error approach will give you the best results for your individual problem. The most common framework for this is most likely the k-fold cross-validation. However, even for a testing procedure, we need to choose some (k) numbers of nodes.\n",
+    "The [following formula](https://stats.stackexchange.com/questions/181/how-to-choose-the-number-of-hidden-layers-and-nodes-in-a-feedforward-neural-netw) may give you a starting point:\n",
+    "\n",
+    "![](assets/2022-03-29-02-11-50.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What is a stationary Time Series\n",
+    "\n",
+    "- Stationarity means that the statistical properties of a time series (or rather the process generating it) do not change over time.\n",
+    "- Stationarity is important because many useful analytical tools and statistical tests and models rely on it.\n",
+    "\n",
+    "It does not mean that the series does not change over time, just that the way it changes does not itself change over time.\n",
+    "\n",
+    "\n",
+    "If you have a time series where you learn the relationship between the past N points and the next point, and then you apply that to a different set of N points to predict the next value, you are implicitly assuming that the same relationship holds between the N predictor points and the following N+1st point you're trying to predict. That's stationarity.\n",
+    "\n",
+    "#### Dickey-Fuller test is used to check for Stationarity\n",
+    "\n",
+    "## Do LSTM requires its data to be stationary ?\n",
+    "\n",
+    "In principle we do not need to check for stationarity nor correct for it when we are using an LSTM. However, if the data is stationary, it will help with better performance and make it easier for the neural network to learn."
+   ]
   }
  ],
  "metadata": {
