--- a/Finance_Stock_Crypto_Trading/yfinance_stock_data_pulling_TESLA_price_prediction_with_Time_Series.ipynb
+++ b/Finance_Stock_Crypto_Trading/yfinance_stock_data_pulling_TESLA_price_prediction_with_Time_Series.ipynb
@@ -3116,7 +3116,6 @@
         "- Stationarity means that the statistical properties of a time series (or rather the process generating it) do not change over time.\n",
         "- Stationarity is important because many useful analytical tools and statistical tests and models rely on it.\n",
         "\n",
-        "\n",
         "It does not mean that the series does not change over time, just that the way it changes does not itself change over time. The algebraic equivalent is thus a linear function, perhaps, and not a constant one; the value of a linear function changes as 𝒙 grows, but the way it changes remains constant — it has a constant slope; one value that captures that rate of change.\n",
         "\n",
         "![Imgur](https://imgur.com/lRvSyF3.png)\n",
@@ -3212,6 +3211,15 @@
         "id": "Rw0TEoNpa2Bw"
       },
       "source": [
+        "### Dickey-Fuller test\n",
+        "\n",
+        "* Null Hypothesis (H0): It suggests the time series has a unit root, meaning it is non-stationary. It has some time dependent structure.\n",
+        "* Alternate Hypothesis (H1): It suggests the time series does not have a unit root, meaning it is stationary. It does not have time-dependent structure.\n",
+        "* p-value > 0.05: Accept the null hypothesis (H0), the data has a unit root and is non-stationary.\n",
+        "* p-value <= 0.05: Reject the null hypothesis (H0), the data does not have a unit root and is stationary.\n",
+        "\n",
+        "---\n",
+        "\n",
         "From the plots of rolling mean and standard deviation itself you can understand that the standard deviation and mean variation is pretty high.\n",
         "\n",
         "And also some interpretations from dicky fuller test results can be observed as\n",
