updating wgan code arrangement

--- a/Computer_Vision/63-WGAN_from_Scratch_PyTorch/WGAN_Pytorch_From_Scratch_Full_Notebook.ipynb
+++ b/Computer_Vision/63-WGAN_from_Scratch_PyTorch/WGAN_Pytorch_From_Scratch_Full_Notebook.ipynb
@@ -452,15 +452,25 @@
         "            return layers\n",
         "\n",
         "        self.model = nn.Sequential(\n",
-        "            *block(in_features=latent_dim, out_features=128, normalize=False),\n",
-        "            *block(in_features=128, out_features=256),\n",
-        "            *block(in_features=256, out_features=512),\n",
-        "            *block(in_features=512, out_features=1024),\n",
-        "            nn.Linear(in_features=1024, out_features=int(np.prod(img_shape))),\n",
+        "            *block(\n",
+        "                in_features=latent_dim, out_features=128, normalize=False\n",
+        "            ),  # Batch_size, 784 -> Batch_size, 128\n",
+        "            *block(\n",
+        "                in_features=128, out_features=256\n",
+        "            ),  # Batch_size, 128 -> Batch_size, 256\n",
+        "            *block(\n",
+        "                in_features=256, out_features=512\n",
+        "            ),  # Batch_size, 256 -> Batch_size, 512\n",
+        "            *block(\n",
+        "                in_features=512, out_features=1024\n",
+        "            ),  # Batch_size, 512 -> Batch_size, 1024\n",
+        "            nn.Linear(\n",
+        "                in_features=1024, out_features=int(np.prod(img_shape))\n",
+        "            ),  # Batch_size, 1024 -> Batch_size, np.prod(img_shape)\n",
         "            nn.Tanh()\n",
         "        )\n",
         "\n",
-        "    def forward(self, z):\n",
+        "    def forward(self, img_shape, z):\n",
         "        img = self.model(z)\n",
         "        img = img.view(img.shape[0], *img_shape)\n",
         "        return img"
@@ -493,11 +503,17 @@
         "        super(Critic, self).__init__()\n",
         "\n",
         "        self.model = nn.Sequential(\n",
-        "            nn.Linear(in_features=int(np.prod(img_shape)), out_features=512),\n",
-        "            nn.LeakyReLU(negative_slope=0.2, inplace=True),\n",
-        "            nn.Linear(in_features=512, out_features=256),\n",
-        "            nn.LeakyReLU(negative_slope=0.2, inplace=True),\n",
-        "            nn.Linear(in_features=256, out_features=1),\n",
+        "            nn.Linear(\n",
+        "                in_features=int(np.prod(img_shape)), out_features=512\n",
+        "            ),  # Batch_size, np.prod(img_shape) -> Batch_size, 512\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Linear(\n",
+        "                in_features=512, out_features=256\n",
+        "            ),  # Batch_size, 512 -> Batch_size, 256\n",
+        "            nn.LeakyReLU(0.2, inplace=True),\n",
+        "            nn.Linear(\n",
+        "                in_features=256, out_features=1\n",
+        "            ),  # Batch_size, 256 -> Batch_size, 1\n",
         "        )\n",
         "\n",
         "    def forward(self, img):\n",
