finishing BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation

--- a/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
+++ b/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
@@ -4,7 +4,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation - PyTorch Implementation from Scratch"
+        "## BiCycleGAN - Paper - Toward Multimodal Image-to-Image Translation - PyTorch Implementation from Scratch\n",
+        "\n",
+        "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=iCXruj3slIk&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=17)\n",
+        "\n",
+        "[![Imgur](https://imgur.com/n7xTxVm.png)](https://www.youtube.com/watch?v=iCXruj3slIk&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=17)\n"
       ]
     },
     {
