finishing BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation

--- a/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
+++ b/Computer_Vision/BiCycleGAN_Toward_Multimodal_Image-to-Image_Translation.ipynb
@@ -15,7 +15,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 👉 The Maps - Dataset link - http://efrosgans.eecs.berkeley.edu/pix2pix/datasets/"
+        "### 👉 The Maps - Dataset link - http://efrosgans.eecs.berkeley.edu/pix2pix/datasets/\n",
+        "\n",
+        "## About the Satellite to Map Image Translation Dataset\n",
+        "\n",
+        "This is a dataset comprised of satellite images of New York and their corresponding Google maps pages. The image translation problem involves converting satellite photos to Google maps format, or the reverse, Google maps images to Satellite photos.\n",
+        "\n",
+        "The dataset is provided on the pix2pix website and can be downloaded as a 255-megabyte zip file.\n",
+        "\n",
+        "maps\n",
+        "├── train\n",
+        "└── val\n",
+        "\n",
+        "The train folder contains 1,097 images, whereas the validation dataset contains 1,099 images.\n",
+        "\n",
+        "Images have a digit filename and are in JPEG format. Each image is 1,200 pixels wide and 600 pixels tall and contains both the satellite image on the left and the Google maps image on the right."
       ]
     },
     {
