Implementing LeNet5 on MNIST Kaggle Dataset - Ensemble with TensorFlow

--- a/Computer_Vision/MNIST_LeNet5_Ensemble_TensorFlow_High_Accuracy.ipynb
+++ b/Computer_Vision/MNIST_LeNet5_Ensemble_TensorFlow_High_Accuracy.ipynb
@@ -11,7 +11,10 @@
     "\n",
     "### [Dataset Link](https://www.kaggle.com/competitions/digit-recognizer)\n",
     "\n",
-    "\n"
+    "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=yWLK8YSYhxo&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=18)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/PfxgcSh.png)](https://www.youtube.com/watch?v=yWLK8YSYhxo&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=18)\n"
    ]
   },
   {
