Implementing LeNet5 on MNIST Kaggle Dataset - Ensemble with TensorFlow

--- a/Computer_Vision/MNIST_LeNet5_Ensemble_TensorFlow_High_Accuracy.ipynb
+++ b/Computer_Vision/MNIST_LeNet5_Ensemble_TensorFlow_High_Accuracy.ipynb
@@ -1069,6 +1069,16 @@
     "\n",
     "    submission.to_csv(\"MNIST_ensemble_cnn.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Some References\n",
+    "\n",
+    "1. https://www.kaggle.com/code/friskycodeur/image-recognition-using-cnn-explained/notebook\n",
+    "2. https://www.kaggle.com/code/mohammedmurtuzalabib/mnist-ensemble-of-5-cnns-0-99742/notebook"
+   ]
   }
  ],
  "metadata": {
