adding final comments to MNIST-LeNet5

--- a/Computer_Vision/MNIST_LeNet5_Ensemble_TensorFlow_High_Accuracy.ipynb
+++ b/Computer_Vision/MNIST_LeNet5_Ensemble_TensorFlow_High_Accuracy.ipynb
@@ -572,6 +572,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## to_categorical\n",
+    "\n",
+    "Converts a class vector (integers) to binary class matrix. A binary matrix representation of the input.\n",
+    "\n",
+    "## Why we need to_categorical\n",
+    "\n",
+    "A classification model with multiple classes doesn't work well if you don't have classes distributed in a binary matrix.\n",
+    "\n",
+    "The reason you want to_categorical (even on numeric labels) is due to how the relationship between your labels is understood by the algorithm.\n",
+    "\n",
+    "For example, suppose you made a color classifier. You mark red as 1, blue as 2, and orange as 3.\n",
+    "\n",
+    "Now you feed them into the machine learning algorithm to help decide what your input matches. The math is going to say that orange is higher than red. This obviously isn't your intent, but the network will know that orange is greater than red.\n",
+    "\n",
+    "### Another example\n",
+    "\n",
+    "Suppose you have three clasess, the vector goes like this:\n",
+    "\n",
+    "- [1, 0, 0] = class 1     \n",
+    "- [0, 1, 0] = class 2    \n",
+    "- [0, 0, 1] = class 3\n",
+    "\n",
+    "You use `to_categorical` to transform your training data before you pass it to your model. \n",
+    "\n",
+    "If your training data uses classes as numbers, `to_categorical` will transform those numbers in proper vectors for using with models. You can't simply train a classification model without that. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -589,6 +620,42 @@
    ],
    "source": [
     "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Augmentation \n",
+    "\n",
+    "Following Augmentation have been applied on this set of 42,000 images training images.\n",
+    "\n",
+    "### 1. rotation_range:\n",
+    "\n",
+    "To randomly rotate images through any degree between 0 and 360 by providing an integer value in the rotation_range argument.\n",
+    "\n",
+    "When the image is rotated, some pixels will move outside the image and leave an empty area that needs to be filled in. You can fill this in different ways like a constant value or nearest pixel values, etc. This is specified in the fill_mode argument and the default value is “nearest” which simply replaces the empty area with the nearest pixel values.\n",
+    "\n",
+    "\n",
+    "### 2. zoom_range = 0.10,  \n",
+    "\n",
+    "\n",
+    "### 3. Random Shifts with width_shift_range and height_shift_range\n",
+    "\n",
+    "It may happen that the object may not always be in the center of the image. To overcome this problem we can shift the pixels of the image either horizontally or vertically; this is done by adding a certain constant value to all the pixels.\n",
+    "\n",
+    "ImageDataGenerator class has the argument height_shift_range for a vertical shift of image and width_shift_range for a horizontal shift of image. If the value is a float number, that would indicate the percentage of width or height of the image to shift. Otherwise, if it is an integer value then simply the width or height are shifted by those many pixel values.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 4. vertical_flip and horizontal_flip\n",
+    "\n",
+    "ImageDataGenerator class has parameters horizontal_flip and vertical_flip  for flipping along the vertical or the horizontal axis. However, this technique should be according to the object in the image. For example, vertical flipping of a car would not be a sensible thing compared to doing it for a symmetrical object like football or something else. \n",
+    "\n",
+    "\n",
+    "### 5. brightness_range\n",
+    "\n",
+    "Brightness can be controlled in the ImageDataGenrator class through the brightness_range argument. It accepts a list of two float values and picks a brightness shift value from that range. Values less than 1.0 darkens the image, whereas values above 1.0 brighten the image."
    ]
   },
   {
@@ -1078,6 +1145,45 @@
     "\n",
     "1. https://www.kaggle.com/code/friskycodeur/image-recognition-using-cnn-explained/notebook\n",
     "2. https://www.kaggle.com/code/mohammedmurtuzalabib/mnist-ensemble-of-5-cnns-0-99742/notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bonus Point - A Note on `model[cnn].fit_` method used inside my train() method above\n",
+    "\n",
+    "As mentioned in the [documentation][1] : \n",
+    "\n",
+    ">  x: Input data. It could be\n",
+    ">  - A Numpy array (or array-like), or a list of arrays (in case the model has multiple inputs). \n",
+    ">  - A TensorFlow tensor, or a list of tensors (in case the model has multiple inputs).\n",
+    ">  - A dict mapping input names to the corresponding array/tensors, if the\n",
+    ">      model has named inputs. \n",
+    ">  - A tf.data dataset. Should return a tuple of either (inputs, targets) or (inputs, targets, sample_weights)\n",
+    ">  - *A generator or keras.utils.Sequence returning (inputs, targets) or (inputs, targets, sample weights).\n",
+    "\n",
+    "\n",
+    "you can simply pass the generator to `Model.fit` as below\n",
+    "\n",
+    "```py\n",
+    "\n",
+    "data_gen_train = ImageDataGenerator(rescale=1/255.)\n",
+    "\n",
+    "data_gen_valid = ImageDataGenerator(rescale=1/255.)\n",
+    "\n",
+    "train_generator = data_gen_train.flow_from_directory(train_dir, target_size=(128,128), batch_size=128, class_mode=\"binary\")\n",
+    "\n",
+    "valid_generator = data_gen_valid.flow_from_directory(validation_dir, target_size=(128,128), batch_size=128, class_mode=\"binary\")\n",
+    "\n",
+    "model.fit(train_generator, epochs=2, validation_data=valid_generator) \n",
+    "\n",
+    "```\n",
+    "\n",
+    "  [1]: https://www.tensorflow.org/versions/r2.1/api_docs/python/tf/keras/Model#fit\n",
+    "\n",
+    "\n",
+    "---"
    ]
   }
  ],
