Hausdorff Distance calculation

--- a/Computer_Vision/Hausdorff_Distance.ipynb
+++ b/Computer_Vision/Hausdorff_Distance.ipynb
@@ -6,6 +6,13 @@
    "source": [
     "## Hausdorff Distance Calculation\n",
     "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=vGLazsy0ekQ&list=PLxqBkZuBynVRMORlFw95iNTp9aZzmmz4Y&index=11)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/Z9P2nHm.png)](https://www.youtube.com/watch?v=vGLazsy0ekQ&list=PLxqBkZuBynVRMORlFw95iNTp9aZzmmz4Y&index=11)\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
     "![Imgur](https://imgur.com/dbMgra3.png)\n",
     "\n",
     "## The Hausdorff distance is defined as the maximum of all minimum distances between two curves. \n",
