completing Inceptionv4_Pretrained_Torch Image Segmentation

--- a/Aerial-Drone-Images-Semantic-Segmentation-PyTorch-Inception-V4-Pretrained/Inceptionv4_Pretrained_Torch.ipynb
+++ b/Aerial-Drone-Images-Semantic-Segmentation-PyTorch-Inception-V4-Pretrained/Inceptionv4_Pretrained_Torch.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "# Inceptionv4 (Pretrained) with PyTorch on Drone Dataset\n",
     "\n",
-    "[Dataset Link](https://www.kaggle.com/datasets/bulentsiyah/semantic-drone-dataset)"
+    "[Dataset Link](https://www.kaggle.com/datasets/bulentsiyah/semantic-drone-dataset)\n",
+    "\n",
+    "### Dataset Overview\n",
+    "\n",
+    "The Semantic Drone Dataset focuses on semantic understanding of urban scenes for increasing the safety of autonomous drone flight and landing procedures. The imagery depicts more than 20 houses from nadir (bird's eye) view acquired at an altitude of 5 to 30 meters above ground. A high resolution camera was used to acquire images at a size of 6000x4000px (24Mpx). The training set contains 400 publicly available images and the test set is made up of 200 private images."
    ]
   },
   {
