completing Inceptionv4_Pretrained_Torch Image Segmentation

--- a/Aerial-Drone-Images-Semantic-Segmentation-PyTorch-Inception-V4-Pretrained/Inceptionv4_Pretrained_Torch.ipynb
+++ b/Aerial-Drone-Images-Semantic-Segmentation-PyTorch-Inception-V4-Pretrained/Inceptionv4_Pretrained_Torch.ipynb
@@ -14,6 +14,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|  Raw image  |\n",
+    "| ------------- |\n",
+    "|  <img height=\"400\" width=\"600\" src=\"https://i.ibb.co/8bj6qNH/42.jpg\"/>  |\n",
+    "|  Semantic Segmentation  |\n",
+    "| ------------- |\n",
+    "|  <img height=\"400\" width=\"600\" src=\"https://i.ibb.co/ctxy590/42.png\"/>  |"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
