--- a/Computer_Vision/run_length_encoding.ipynb
+++ b/Computer_Vision/run_length_encoding.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=LG8lbm_W380&list=PLxqBkZuBynVRMORlFw95iNTp9aZzmmz4Y&index=15)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/qdogxcu.png)](https://www.youtube.com/watch?v=LG8lbm_W380&list=PLxqBkZuBynVRMORlFw95iNTp9aZzmmz4Y&index=15)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
