updating UW Stomach Segmentation TF Code

--- a/Segmentation-for-Intestine-Cancer-TensorFlow-UW-Madison-Kaggle-Competition/uw_madison.ipynb
+++ b/Segmentation-for-Intestine-Cancer-TensorFlow-UW-Madison-Kaggle-Competition/uw_madison.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# The Problem here is to create a model to automatically segment the stomach and intestines on MRI scans.\n",
+    "\n",
+    "#### Kaggle Competition [Link](https://www.kaggle.com/competitions/uw-madison-gi-tract-image-segmentation/overview)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
