updating UW Stomach Segmentation TF Code

--- a/Segmentation-for-Intestine-Cancer-TensorFlow-UW-Madison-Kaggle-Competition/uw_madison.ipynb
+++ b/Segmentation-for-Intestine-Cancer-TensorFlow-UW-Madison-Kaggle-Competition/uw_madison.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# The Problem here is to create a model to automatically segment the stomach and intestines on MRI scans.\n",
+    "# Unet model (with inceptionresnetv2 architecture as the backbone ) to segment the stomach and intestines on MRI scans taken from patients with Intestine Cancer.\n",
     "\n",
     "#### Kaggle Competition [Link](https://www.kaggle.com/competitions/uw-madison-gi-tract-image-segmentation/overview)"
    ]
