updating YT Links

--- a/Segmentation-for-Intestine-Cancer-TensorFlow-UW-Madison-Kaggle-Competition/Mask_image_wrapping_with_rle_decode.ipynb
+++ b/Segmentation-for-Intestine-Cancer-TensorFlow-UW-Madison-Kaggle-Competition/Mask_image_wrapping_with_rle_decode.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=ciuLu99UiJM&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=29)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/qmsX0qI.png)](https://www.youtube.com/watch?v=ciuLu99UiJM&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=29)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
