updating sentiment analysis

--- a/NLP/sentiment_analysis_textblob_Vader.ipynb
+++ b/NLP/sentiment_analysis_textblob_Vader.ipynb
@@ -6,9 +6,13 @@
    "source": [
     "## Sentiment-analysis-movie-reviews\n",
     "\n",
-    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=ciuLu99UiJM&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=29)\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=m9ZHNDzMR0Y&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=2)\n",
     "\n",
-    "[![Imgur](https://imgur.com/qmsX0qI.png)](https://www.youtube.com/watch?v=ciuLu99UiJM&list=PLxqBkZuBynVRyOJs4RWmB_fKlOVe5S8CR&index=29)"
+    "[![Imgur](https://imgur.com/92Cnoqv.png)](https://www.youtube.com/watch?v=m9ZHNDzMR0Y&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=2)\n",
+    "---\n",
+    "\n",
+    "### [Dataset in Kaggle](https://www.kaggle.com/datasets/hassanamin/sentimentanalysismoviereviews)\n",
+    "\n"
    ]
   },
   {
