updating code for Tweet Emotion EDA

--- a/NLP/Text Analytics of Tweet Emotion - EDA with Plotly.ipynb
+++ b/NLP/Text Analytics of Tweet Emotion - EDA with Plotly.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Text Analytics of Tweet Emotion - EDA with Plotly\n",
+    "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=m9ZHNDzMR0Y&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=2)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/8WtJCaZ.png)](https://www.youtube.com/watch?v=m9ZHNDzMR0Y&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=2)\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
