updating code for finetuning bert-based-cased

--- a/NLP/bert-base-uncased-fine-tuned-kaggle-hate-speech-dataset.ipynb
+++ b/NLP/bert-base-uncased-fine-tuned-kaggle-hate-speech-dataset.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fine Tuning BERT-Based-Uncased Hugging Face Model on Kaggle Hate Speech Dataset\n",
+    "\n",
+    "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=0Y03waAL4Gw&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=3)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/dJt4A8B.png)](https://www.youtube.com/watch?v=0Y03waAL4Gw&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=3)\n",
+    "---\n",
+    "\n",
+    "### [Dataset in Kaggle](https://www.kaggle.com/datasets/mrmorj/hate-speech-and-offensive-language-dataset?ref=hackernoon.com)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
