updating code for finetuning bert-based-cased

--- a/NLP/bert-base-uncased-fine-tuned-kaggle-hate-speech-dataset.ipynb
+++ b/NLP/bert-base-uncased-fine-tuned-kaggle-hate-speech-dataset.ipynb
@@ -692,13 +692,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = TFAutoModelForSequenceClassification.from_pretrained(\"bert-based-cased\", num_labels = 3)\n",
+    "model = TFAutoModelForSequenceClassification.from_pretrained(\"bert-base-cased\", num_labels=3)\n",
+    "# model = TFAutoModelForSequenceClassification.from_pretrained(\"/mnt/e0ccdbdb-22c3-4d9b-9413-fd976a2e99ae/M1/Code_Org/HF_Models/bert-base-uncased\", num_labels=3)\n",
+    "\n",
     "\n",
     "model.compile(\n",
     "    optimizer=tf.keras.optimizers.Adam(learning_rate=5e-5),\n",
-    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits = True),\n",
-    "    metrics = tf.keras.SparseCategoricalAccuracy()\n",
-    ")"
+    "    loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "    metrics=tf.metrics.SparseCategoricalAccuracy(),\n",
+    ")\n"
    ]
   },
   {
@@ -707,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(train_set_for_final_model, validation_data=val_set_for_final_model, epochs=3 )"
+    "history = model.fit(train_set_for_final_model, validation_data=val_set_for_final_model, epochs=3 )"
    ]
   },
   {
@@ -715,14 +717,72 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.plot(history.history['sparse_categorical_accuracy'])\n",
+    "plt.plot(history.history['val_sparse_categorical_accuracy'])\n",
+    "plt.title('model sparse categorical accuracy')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'val'], loc='upper left')\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.title('model loss')\n",
+    "plt.ylabel('loss')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'val'], loc='upper left')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test_loss, test_acc = model.evaluate(test_set_for_final_model,verbose=2)\n",
+    "print('\\nTest accuracy:', test_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_score_and_class_dict = \n",
+    "{0: 'Hate Speech',\n",
+    " 1: 'Offensive Language',\n",
+    " 2: 'Neither'}\n",
+    "\n",
+    "preds = model(tokenizer([\"He is useless, I dont know why he came to our neighbourhood\", \"That guy sucks\", \"He is such a retard\"],return_tensors=\"tf\",padding=True,truncation=True))['logits']\n",
+    "\n",
+    "print(preds)\n",
+    "\n",
+    "class_preds = np.argmax(preds, axis=1)\n",
+    "\n",
+    "for pred in class_preds:\n",
+    "  print(predict_score_and_class_dict[pred])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_score_and_class_dict = {0: 'Hate Speech',\n",
+    " 1: 'Offensive Language',\n",
+    " 2: 'Neither'}\n",
+    "preds = model(tokenizer([\"He dresses up like a begger thise days\"],return_tensors=\"tf\",padding=True,truncation=True))['logits']\n",
+    "print(preds)\n",
+    "class_preds = np.argmax(preds, axis=1)\n",
+    "\n",
+    "for pred in class_preds:\n",
+    "  print(predict_score_and_class_dict[pred])"
+   ]
   }
  ],
  "metadata": {
