--- a/NLP/Fine_Tuning_DistilBert_Poem_Sentiments.ipynb
+++ b/NLP/Fine_Tuning_DistilBert_Poem_Sentiments.ipynb
@@ -5,7 +5,10 @@
       "metadata": {},
       "source": [
         "## Fine-Tuning DistilBert Poem Sentiment\n",
-        "\n"
+        "\n",
+        "# [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=zcW2HouIIQg&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=5)\n",
+        "\n",
+        "[![Imgur](https://imgur.com/bzhhXLq.png)](https://www.youtube.com/watch?v=zcW2HouIIQg&list=PLxqBkZuBynVQEvXfJpq3smfuKq3AiNW-N&index=5)"
       ]
     },
     {
