updating links for Word Vector with spaCy

--- a/NLP/Word-Vectors-Understanding-with-Spacy.ipynb
+++ b/NLP/Word-Vectors-Understanding-with-Spacy.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Understanding Word Vectors usage with Spacy Word and Sentence Similarity\n",
+    "\n",
+    "## [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=SzSANHjYhfg&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=6)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/E1fN7T4.png)](https://www.youtube.com/watch?v=SzSANHjYhfg&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=6)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### A word vector is basically a dense representation of a word.\n",
     "\n"
    ]
