Fuzzy-String-Matching

--- a/NLP/Fuzzy-String-Matching.ipynb
+++ b/NLP/Fuzzy-String-Matching.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fuzzy-String-Matching"
+    "## Fuzzy-String-Matching\n",
+    "\n",
+    "## [Link to my Youtube Video Explaining this whole Notebook](https://www.youtube.com/watch?v=_IGdekeBCoE&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=7)\n",
+    "\n",
+    "[![Imgur](https://imgur.com/4RQ499n.png)](https://www.youtube.com/watch?v=_IGdekeBCoE&list=PLxqBkZuBynVTn2lkHNAcw6lgm1MD5QiMK&index=7)"
    ]
   },
   {
